# pygui

./: pyproject.toml
src/pygui/: __init__.py  calendarctrl.py  matplot.py  slideswitch.py  tkcalendar.py  tkcontrol.py  tkscrollpicker.py  tkslideswitch.py  tkwin.py  winbasic.py
src/pygui_simple/: cv2_utilities.py  tkcalendar.py  tkcontrol.py  tkmatplot.py  tkscrollpicker.py  tkslideswitch.py  tkwin.py  winbasic.py
tests/: test_tkwin.py
tests/resources/: windowSample.xml
