[project]
name = "pygui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Youchee", email = "youchi.xu@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
