[project]
name = "pygui_simple"
version = "0.3.1"
description = "A simple gui library"
readme = "README.md"
authors = [
    { name = "Youchee", email = "youchi.xu@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/YoucheeXu/pygui"
Issues = "https://github.com/YoucheeXu/pygui/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
